Adjusting coverage script generator